fix: Ensure border is visible even in dark mode

--- a/assets/scss/_bootstrap/_index.scss
+++ b/assets/scss/_bootstrap/_index.scss
@@ -18,9 +18,6 @@ $utilities: map-remove($utilities, align, float, shadow, top, bottom, start, end
   line-height, text-decoration, text-transform, white-space, gradient, user-select, pointer-events, rounded-top, rounded-end,
   rounded-bottom, rounded-start, visibility);
 
-// minor tweaks
-$enable-important-utilities: false;
-
 // style changes
 $accordion-button-active-bg: $gray-100;
 $list-group-active-bg: $secondary;
